# Qt_MyProject

./: README.md
QtChart/: QtChart.pro  main.cpp  mygraphicsview.cpp  mygraphicsview.h  qtchart.cpp  qtchart.h  qtchart.ui
QtDevelop6.0/02Qt6.0BookProgram/: qmake完整版 V1.2 版本说明.txt
QtDevelop6.0/02Qt6.0BookProgram/Chap05_ModelView/samp5_3Delegate/: samp5_3.pro
QtDevelop6.0/02Qt6.0BookProgram/Chap06_Events/samp6_1DefaultHandler/: samp6_1.pro
SerialModbusRTU/: SerialModbusRTU.pro  SerialModbusRTU.pro.user.31dda58  SerialModbusRTU.pro.user.b0fd01a  crc.cpp  crc.h  main.cpp  res.qrc  serialcommunication.cpp  serialcommunication.h  serialcommunication.ui
SubWindowsDsiplay/: SubWindowsDsiplay.pro  doublescreen.cpp  doublescreen.h  main.cpp  mainwindow.ui
build-person_01-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-person_01-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/person_01_autogen/: deps  mocs_compilation.cpp
build-person_01-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/person_01_autogen/EWIEGA46WW/: moc_tperson.cpp  moc_tperson.cpp.d  moc_widget.cpp  moc_widget.cpp.d
build-person_01-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-person_01-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-person_01-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-person_01-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/person_01_autogen/: deps
build-person_01-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/person_01_autogen/EWIEGA46WW/: moc_tperson.cpp  moc_tperson.cpp.d  moc_widget.cpp  moc_widget.cpp.d
build-person_01-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/person_01_autogen/include/: ui_widget.h
person_01/: CMakeLists.txt  tperson.cpp  tperson.h  widget.cpp  widget.h  widget.ui
(+273 files in other folders)
